# ppht

./: .gitignore  Doxyfile.in  LICENSE.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  aminclude_static.am  configure  configure.ac  git-semver  index.html  ppht.hpp  semver.pl
.github/workflows/: c-cpp.yml
doc/html/: _r_e_a_d_m_e_8md.html  accumulator_8hpp.html  accumulator_8hpp__dep__incl.map  accumulator_8hpp__dep__incl.md5  accumulator_8hpp__incl.map  accumulator_8hpp__incl.md5  accumulator_8hpp_source.html  annotated.html  channel_8hpp.html  channel_8hpp__dep__incl.map  channel_8hpp__dep__incl.md5  channel_8hpp__incl.map  channel_8hpp__incl.md5  channel_8hpp_source.html  classes.html  classppht_1_1accumulator-members.html  classppht_1_1accumulator.html  classppht_1_1accumulator__coll__graph.map  classppht_1_1accumulator__coll__graph.md5  classppht_1_1channel-members.html  classppht_1_1channel.html  classppht_1_1channel_1_1iterator-members.html  classppht_1_1channel_1_1iterator.html  classppht_1_1channel_1_1iterator__coll__graph.map  classppht_1_1channel_1_1iterator__coll__graph.md5  classppht_1_1channel__coll__graph.map  classppht_1_1channel__coll__graph.md5  classppht_1_1point__set-members.html  classppht_1_1point__set.html  classppht_1_1point__set__coll__graph.map  classppht_1_1point__set__coll__graph.md5  classppht_1_1raster-members.html  classppht_1_1raster.html  classppht_1_1segment__t-members.html  classppht_1_1segment__t.html  classppht_1_1segment__t__coll__graph.map  classppht_1_1segment__t__coll__graph.md5  classppht_1_1segment__t__inherit__graph.map  classppht_1_1segment__t__inherit__graph.md5  classppht_1_1state-members.html  (+129 more)
include/: accumulator.hpp  channel.hpp  kd-search.hpp  point_set.hpp  postprocess.hpp  ppht.hpp  raster.hpp  state.hpp  trig.hpp  types.hpp
m4/: ax_am_macros_static.m4
ppht/: accumulator.hpp  channel.hpp  kd-search.hpp  parameters.hpp  point_set.hpp  postprocess.hpp  raster.hpp  state.hpp  trig.hpp  types.hpp
test/: .gitignore  01-raster.cpp  01-types.cpp  02-trig.cpp  03-accumulator.cpp  03-channel.cpp  04-channel.cpp  04-point_set.cpp  05-point_set.cpp  06-ppht.cpp  06-state.cpp  07-ppht.cpp  08-postprocess.cpp  Makefile.am  Makefile.in  image-01.hpp  image-02.hpp  image-03.hpp  tap.hpp
